fix alignment between label and input group. #97.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -365,6 +365,10 @@ body {
 	color: lightgray;
 }
 
+.args-form .form-group {
+	align-items: center;
+}
+
 .args-form .form-control {
 	font-family: monospace;
 	font-size:1.3rem;
